test_debug_3.log
PASS __tests__/components/layout/connection-status.test.tsx
PASS __tests__/components/social/social-filter-bar.test.tsx
PASS __tests__/unit/utils.test.ts
FAIL __tests__/unit/offline/action-registry.test.ts
  ● Test suite failed to run

    ReferenceError: Request is not defined

      31 |     const company = formData.get('company') as string
      32 |     const jobTitle = formData.get('jobTitle') as string
    > 33 |     const notes = formData.get('notes') as string
         |                ^
      34 |     const type = formData.get('type') as string
      35 |     const organizationId = formData.get('organizationId') as string
      36 |

      at Object.Request (node_modules/next/src/server/web/spec-extension/request.ts:14:34)
      at Object.<anonymous> (node_modules/next/dist/server/web/spec-extension/adapters/next-request.js:37:18)
      at Object.<anonymous> (node_modules/next/dist/server/pipe-readable.js:23:22)
      at Object.<anonymous> (node_modules/next/dist/server/render-result.js:12:23)
      at Object.<anonymous> (node_modules/next/dist/server/response-cache/utils.js:28:62)
      at Object.<anonymous> (node_modules/next/dist/server/response-cache/index.js:16:16)
      at Object.<anonymous> (node_modules/next/dist/server/lib/patch-fetch.js:42:24)
      at Object.<anonymous> (node_modules/next/dist/server/web/spec-extension/unstable-cache.js:12:21)
      at Object.<anonymous> (node_modules/next/cache.js:2:19)
      at Object.<anonymous> (app/actions/contacts.ts:33:16)
      at Object.<anonymous> (lib/offline/action-registry.ts:19:19)
      at Object.<anonymous> (__tests__/unit/offline/action-registry.test.ts:5:25)

FAIL __tests__/components/layout/sidebar.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation, specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/jehb/projects/promoty/node_modules/jose/dist/webapi/index.js:1
    export { compactDecrypt } from './jwe/compact/decrypt.js';
    ^^^^^^

    SyntaxError: Unexpected token 'export'

      26 |
      27 | export async function getSession() {
    > 28 |     const session = (await cookies()).get('session')?.value
         |               ^
      29 |     if (!session) return null
      30 |     return await decrypt(session)
      31 | }

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1318:40)
      at Object.<anonymous> (lib/session.ts:28:15)
      at Object.<anonymous> (app/actions/auth.ts:25:18)
      at Object.<anonymous> (components/layout/sidebar.tsx:19:15)
      at Object.<anonymous> (__tests__/components/layout/sidebar.test.tsx:16:18)

Test Suites: 2 failed, 3 passed, 5 total
Tests:       18 passed, 18 total
Snapshots:   0 total
Time:        0.947 s, estimated 1 s
Ran all test suites.
